--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="google.com">Home</a></li>
+			<li><a href="google.com">About us</a></li>
+			<li><a href="google.com">Contact us</a></li>
+		</ul>
+	</nav>
+	<h1>3 random images</h1>
+	<img alt="Random image" src="https://picsum.photos/id/123/200/300" />
+	<img alt="Random image" src="https://picsum.photos/id/124/200/300" />
+	<img alt="Random image" src="https://picsum.photos/id/125/200/300" />
     <script type="text/javascript" src="./script.js">
 </script>
 
